--- a/backend/wwwroot/src/index.html
+++ b/backend/wwwroot/src/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CoolFitness</title>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="./main.jsx"></script>
   </body>
 </html>
